quick fix for quotes that are too long; something I either just caused or hadn't noticed on one card

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@ body {
 //*****CARD DISPLAY DIV***//
 
 .card_img_div {
+    margin-top: 25px;
     padding-left: 15px;
 }
 
